# rust-video-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  schema.sql  schema_fixed.sql
src/: auth.rs  main.rs  models.rs  signaling.rs  state.rs  ws.rs
src/routes/: api_router_setup.rs  attendance_api.rs  mod.rs  room.rs
src/services/: attendance_service.rs  mod.rs  pagination.rs  webrtc_util.rs
src/socket/: connection.rs  events.rs  mod.rs  room_manager.rs  watch_socket.rs  ws_handler.rs  ws_watch_handler.rs
src/socket/handlers/: broadcast_presence.rs  cleanup.rs  join.rs  leave.rs  media_state.rs  message.rs  mod.rs  room_close.rs  room_feed.rs  rtc_signalling.rs  screen_share.rs  signaling.rs  watch.rs
src/utils/: error.rs  helper.rs
