[package]
name = "rust-video-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
hyper = {version="1.9.0", features=["full"]}
jsonwebtoken = "10.3.0"
nanoid = "0.4.0"
redis = { version = "1.2.0", features = ["tokio-comp", "aio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = {version="0.8.6", features=["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.23.0", features = ["v4"] }

reqwest = { version = "0.13.2", features = ["rustls"] }
dotenvy = "0.15.7"
